fuel-core/src/snapshots/fuel_core__chain_config__tests__snapshot_configurable_block_height.snap
---
source: fuel-core/src/chain_config.rs
expression: json

---
{
  "chain_name": "local_testnet",
  "block_production": "Instant",
  "parent_network": {
    "type": "LocalTest"
  },
  "initial_state": {
    "height": 348700191
  }
}
