fuel-core/src/snapshots/fuel_core__chain_config__tests__snapshot_local_testnet_config.snap
---
source: fuel-core/src/chain_config.rs
expression: json

---
{
  "chain_name": "local_testnet",
  "block_production": "Instant",
  "parent_network": {
    "type": "LocalTest"
  },
  "initial_state": {
    "coins": [
      {
        "owner": "0x0101010101010101010101010101010101010101010101010101010101010101",
        "amount": 10000000,
        "color": "0x0000000000000000000000000000000000000000000000000000000000000000"
      },
      {
        "owner": "0x0202020202020202020202020202020202020202020202020202020202020202",
        "amount": 10000000,
        "color": "0x0000000000000000000000000000000000000000000000000000000000000000"
      },
      {
        "owner": "0x0303030303030303030303030303030303030303030303030303030303030303",
        "amount": 10000000,
        "color": "0x0000000000000000000000000000000000000000000000000000000000000000"
      },
      {
        "owner": "0x0404040404040404040404040404040404040404040404040404040404040404",
        "amount": 10000000,
        "color": "0x0000000000000000000000000000000000000000000000000000000000000000"
      },
      {
        "owner": "0x0505050505050505050505050505050505050505050505050505050505050505",
        "amount": 10000000,
        "color": "0x0000000000000000000000000000000000000000000000000000000000000000"
      },
      {
        "owner": "0x0606060606060606060606060606060606060606060606060606060606060606",
        "amount": 10000000,
        "color": "0x0000000000000000000000000000000000000000000000000000000000000000"
      },
      {
        "owner": "0x0707070707070707070707070707070707070707070707070707070707070707",
        "amount": 10000000,
        "color": "0x0000000000000000000000000000000000000000000000000000000000000000"
      },
      {
        "owner": "0x0808080808080808080808080808080808080808080808080808080808080808",
        "amount": 10000000,
        "color": "0x0000000000000000000000000000000000000000000000000000000000000000"
      },
      {
        "owner": "0x0909090909090909090909090909090909090909090909090909090909090909",
        "amount": 10000000,
        "color": "0x0000000000000000000000000000000000000000000000000000000000000000"
      }
    ]
  }
}
